import {describe, it, expect, test} from "vitest"
import {Cell} from "@ton/core"
import {disassembleAndProcess, disassembleRoot} from "../../decompiler/disasm"
import {AssemblyWriter} from "../../printer/assembly-writer"
import {debugSymbols} from "../../utils/known-methods"

const wallets: string[] = [
    "te6cckEBAQEARAAAhP8AIN2k8mCBAgDXGCDXCx/tRNDTH9P/0VESuvKhIvkBVBBE+RDyovgAAdMfMSDXSpbTB9QC+wDe0aTIyx/L/8ntVEH98Ik=",
    "te6cckEBAQEAUwAAov8AIN0gggFMl7qXMO1E0NcLH+Ck8mCBAgDXGCDXCx/tRNDTH9P/0VESuvKhIvkBVBBE+RDyovgAAdMfMSDXSpbTB9QC+wDe0aTIyx/L/8ntVNDieG8=",
    "te6cckEBAQEAXwAAuv8AIN0gggFMl7ohggEznLqxnHGw7UTQ0x/XC//jBOCk8mCBAgDXGCDXCx/tRNDTH9P/0VESuvKhIvkBVBBE+RDyovgAAdMfMSDXSpbTB9QC+wDe0aTIyx/L/8ntVLW4bkI=",
    "te6cckEBAQEAVwAAqv8AIN0gggFMl7qXMO1E0NcLH+Ck8mCDCNcYINMf0x8B+CO78mPtRNDTH9P/0VExuvKhA/kBVBBC+RDyovgAApMg10qW0wfUAvsA6NGkyMsfy//J7VShNwu2",
    "te6cckEBAQEAYwAAwv8AIN0gggFMl7ohggEznLqxnHGw7UTQ0x/XC//jBOCk8mCDCNcYINMf0x8B+CO78mPtRNDTH9P/0VExuvKhA/kBVBBC+RDyovgAApMg10qW0wfUAvsA6NGkyMsfy//J7VQETNeh",
    "te6cckEBAQEAYgAAwP8AIN0gggFMl7qXMO1E0NcLH+Ck8mCDCNcYINMf0x/TH/gjE7vyY+1E0NMf0x/T/9FRMrryoVFEuvKiBPkBVBBV+RDyo/gAkyDXSpbTB9QC+wDo0QGkyMsfyx/L/8ntVD++buA=",
    "te6cckEBAQEAcQAA3v8AIN0gggFMl7ohggEznLqxn3Gw7UTQ0x/THzHXC//jBOCk8mCDCNcYINMf0x/TH/gjE7vyY+1E0NMf0x/T/9FRMrryoVFEuvKiBPkBVBBV+RDyo/gAkyDXSpbTB9QC+wDo0QGkyMsfyx/L/8ntVBC9ba0=",
]

const contracts: string[] = [
    "te6ccgECFAEAAtQAART/APSkE/S88sgLAQIBIAIDAgFIBAUE+PKDCNcYINMf0x/THwL4I7vyZO1E0NMf0x/T//QE0VFDuvKhUVG68qIF+QFUEGT5EPKj+AAkpMjLH1JAyx9SMMv/UhD0AMntVPgPAdMHIcAAn2xRkyDXSpbTB9QC+wDoMOAhwAHjACHAAuMAAcADkTDjDQOkyMsfEssfy/8QERITAubQAdDTAyFxsJJfBOAi10nBIJJfBOAC0x8hghBwbHVnvSKCEGRzdHK9sJJfBeAD+kAwIPpEAcjKB8v/ydDtRNCBAUDXIfQEMFyBAQj0Cm+hMbOSXwfgBdM/yCWCEHBsdWe6kjgw4w0DghBkc3RyupJfBuMNBgcCASAICQB4AfoA9AQw+CdvIjBQCqEhvvLgUIIQcGx1Z4MesXCAGFAEywUmzxZY+gIZ9ADLaRfLH1Jgyz8gyYBA+wAGAIpQBIEBCPRZMO1E0IEBQNcgyAHPFvQAye1UAXKwjiOCEGRzdHKDHrFwgBhQBcsFUAPPFiP6AhPLassfyz/JgED7AJJfA+ICASAKCwBZvSQrb2omhAgKBrkPoCGEcNQICEekk30pkQzmkD6f+YN4EoAbeBAUiYcVnzGEAgFYDA0AEbjJftRNDXCx+AA9sp37UTQgQFA1yH0BDACyMoHy//J0AGBAQj0Cm+hMYAIBIA4PABmtznaiaEAga5Drhf/AABmvHfaiaEAQa5DrhY/AAG7SB/oA1NQi+QAFyMoHFcv/ydB3dIAYyMsFywIizxZQBfoCFMtrEszMyXP7AMhAFIEBCPRR8qcCAHCBAQjXGPoA0z/IVCBHgQEI9FHyp4IQbm90ZXB0gBjIywXLAlAGzxZQBPoCFMtqEssfyz/Jc/sAAgBsgQEI1xj6ANM/MFIkgQEI9Fnyp4IQZHN0cnB0gBjIywXLAlAFzxZQA/oCE8tqyx8Syz/Jc/sAAAr0AMntVA==",
    "te6cckEBBQEA6AABFP8A9KQT9LzyyAsBAlLTAdDTAwFxsKMB+kBUYTATFm8E+GEC+GLbPALbPPLggjDIfwHKAMntVAIDABTtRNDSADCRbeBtAYjtou37kjB/4HAh10nCH5UwINcLH97AAI6n+QGC8EfHOsWH2LGvsVj0dI2HDFblIQ5CH11+Fzk9qaMh+vI+uuMCkTDicAQAsvhBbyQQI18DcHBybwDIATCCEH8joNIByx/JECQQI21tVSMCyM+FgMoAz4RAzgH6AoBpz0ACXG4BbqiTW20BnsjPhID0APQAz4HJAc+D4vQA9ADJAfsAf9sxBvZpBw==",
    "te6cckECFwEABWYAART/APSkE/S88sgLAQIBYgIOApzQAdDTAwFxsKMB+kBUYTATFm8E+GEC+GLbPBB5VRbbPPLggsh/AcoAVXBQePQABcj0ABT0ABL0AAHI9AAS9AAT9AAT9ADJAczJAczJ7VQVAwLc7aLt+5Iwf+BwIddJwh+VMCDXCx/eIIIQUoX0ArqOFDDTHwGCEFKF9AK68uCB9AQBMTV/4CCCEJRqmLa6jqgw0x8BghCUapi2uvLggdM/ATHIAYIQr/kPV1jLH8s/yfhCAXBt2zx/4MAAkTDjDXAEBQCibW0ibrOZWyBu8tCAbyIBkTLiECRwAwSAQlAjVSMCyM+FgMoAz4RAzgH6AoBpz0ACXG4BbqiTW20BnsjPhID0APQAz4HJAc+D4vQA9ADJAfsAA/75ASCC8C24UaVqfRPCOKWXg9j/gM8YWN8VBDCcvZQPHapPMt7Fuo6GMNs8f9sx4CCC8MsS8nhLSxEX/4lqVJw0RwXdogB9jCg9lwvG7POmL0ZRuo6GMNs8f9sx4ILwDBzXZZRgsPgblCN81f/BOk+1jqaJsoFd503TdwZGpOq6BgkNAtyBAQGAEYtFNISUKHnIWchYzxbJWMzLB8kQOiBulTBZ9FowlEEz9BXiBoEBAYIok3dDP/IYMn9xIW6VW1n0WjCYyAHPAEEz9ELigQEBg++D5SIQSSFulVtZ9FowmMgBzwBBM/RC4oEBAYH8fIkQNwsHA/4gbpUwWfRaMJRBM/QU4oEBC40IYAQe/qqXMblNo5fl5kYi9eYzSLgSrFtHY6k/DdIB0HmNRItERPR0WIASyFnIWM8WyVjMywfJEDYgbpUwWfRZMJRBM/QT4oEBC4kQJH9xIW6VW1n0WTCYyAHPAEEz9EHigQELiRAjghBJUE+ACwsIALiBAQEhbpVbWfRZMJjIAc8AQTP0QeKBAQuNCGAEHv6qlzG5TaOX5eZGIvXmM0i4EqxbR2OpPw3SAdB5jUT4KBA6IG6VMFn0WTCYyAHPFkEz9EHiEGcQVhBFEDRBMAHqgQEBgBFtIG6SMG2OEyBu8tCAbyLIWchYzxbJWMzLB8niEDogbpUwWfRaMJRBM/QV4gaBAQGCKJN3Qz/yGDJtcSFulVtZ9FowmMgBzwBBM/RC4oEBAYPvbSIQSSFulVtZ9FowmMgBzwBBM/RC4gSBAQGB/HxtCgP+IG6VMFn0WjCUQTP0FOKBAQuNCGAEHv6qlzG5TaOX5eZGIvXmM0i4EqxbR2OpPw3SAdB5jURtIG6SMG2OEyBu8tCAbyLIWchYzxbJWMzLB8niEDYgbpUwWfRZMJRBM/QT4oEBC4kQJG1xIW6VW1n0WTCYyAHPAEEz9EHigQELiQsLDABDgBB7+qpcxuU2jl+XmRiL15jNIuBKsW0djqT8N0gHQeY1EAC8ECNtgQEBIW6VW1n0WTCYyAHPAEEz9EHigQELjQhgBB7+qpcxuU2jl+XmRiL15jNIuBKsW0djqT8N0gHQeY1EECltIG6VMFn0WTCYyAHPFkEz9EHiEGcQVhBFEDRBMAAenV8IbW1tbW1tbW1/2zHgAgEgDxQCA5hoEBICE6DTbPFUH2zxsgYVEQAcgQEBJgJZ9AxvoZIwbd8CD6GjbPNs8bIGFRMAAiMCEbx31tnm2eNkDBUWAGLtRNDSAAGOG/QE1AHQ9AT0BPQE1DDQ9AT0BPQE9AQwEHhsGOD0BAEB0W0BbW1tbW1tALQngQEBgBFZ9A1voZIwbd8gbpIwbZzQ1AHQAdMHWWwSbwLibpuLlub3QgZm91bmSOAngQEBgBFZ9A1voZIwbd8gbpIwbZzQ1AHQAdMHWWwSbwLiIG7y0IBvIjADZi4m",
    "te6cckECDgEAAfYAART/APSkE/S88sgLAQIBYgIHAlLQAdDTAwFxsKMB+kBUYTATFm8E+GEC+GLbPALbPPLggjDIfwHKAMntVAsDBMTtou37kjB/4HAh10nCH5UwINcLH94gghB7og3Buo6lMNMfAYIQe6INwbry4IFtMcgBMIIQe6INwQHLH8n4QgF/bds8f+DAAI8YINdJwh+PEIAg1yHbPPhCAX9t2zx/2zHg3gYEBgUBQshwAcsfbwABb4xtb4wB2zxvIgHJkyFus5YBbyJZzMnoMQ0BGsgBzxbJ+EIBf23bPH8GAKJtbSJus5lbIG7y0IBvIgGRMuIQJHADBIBCUCNVIwLIz4WAygDPhEDOAfoCgGnPQAJcbgFuqJNbbQGeyM+EgPQA9ADPgckBz4Pi9AD0AMkB+wACAVgICgIRudPts8Ads8MYCwkACqoJgCCwAhG4Ni2zwB2zwxgLDAAo7UTQ0gABkjBt4IEBAdcAAQHRMG0CUshvAAFvjG1vjIt0hlbGxvLCCNs8Ads8byIByZMhbrOWAW8iWczJ6DHQDQ0AuiDXSiHXSZcgwgAiwgCxjkoDbyKAfyLPMasCoQWrAlFVtgggwgCcIKoCFdcYUDPPFkAU3llvAlNBocIAmcgBbwJQRKGqAo4SMTPCAJnUMNAg10oh10mScCDi4uhfA294dNo=",
    "te6cckECCwEAAeEAART/APSkE/S88sgLAQIBIAIIAgFIAwYCZNAB0NMDAXGwowH6QFRhMBMWbwT4YQL4Yts8QAPbPPLggsh/AcoAWVnPFoEBAc8Aye1UCQQB9O2i7fuSMH/gcCHXScIflTAg1wsf3iCCEJRqmLa6jqgw0x8BghCUapi2uvLggdM/ATHIAYIQr/kPV1jLH8s/yfhCAXBt2zx/4MAAjir5AYLw+1r7IxTEqD9jDu46vRuyem3VdL3ILOg6m1o4jr56K+i6k3/bMeCRMOJwBQCibW0ibrOZWyBu8tCAbyIBkTLiECRwAwSAQlAjVSMCyM+FgMoAz4RAzgH6AoBpz0ACXG4BbqiTW20BnsjPhID0APQAz4HJAc+D4vQA9ADJAfsAAhGgiju2ebZ42EMJBwACIQI08ts8WNs88uCCyH8BygBZWc8WgQEBzwDJ7VQJCgA+7UTQ0gABnPpAAQGBAQHXAFlsEuD6QAEB0fgjgQEsoADm7aLt+3Ah10nCH5UwINcLH94gghA7eICEuo4dMNMfAYIQO3iAhLry4IGBAQHXAAEx+CO6kvgA3n/gwACOMvkBgvDDwfPhnvZ5ZPbx2hrYW9CLNfiwL/uIFBj7bB+ztGjUYrqb+CMhvJL4AN5/2zHgkTDicNRpvSk=",
    "te6cckEBHAEA9QABFP8A9KQT9LzyyAsBAgFiAgQCUtAB0NMDAXGwowH6QFRhMBMWbwT4YQL4Yts8Ats88uCCMMh/AcoAye1UGQMAGJIwf+Ag10kxwh8wcAIBIAUYAgEgBhACASAHCgIPtWgbZ5tnhjAZCAEE2zwJAAJyAgEgCw0CD7FR9s82zwxgGQwABIAoAg+xWbbPNs8MYBkOAQTbPA8ABIAyAgEgERYCASASFAIPsWB2zzbPDGAZEwAEgBQCD7FoNs82zwxgGRUABIAeAg+2vFtnm2eGMBkXAAJ6Ag+/O9bZ5tnhjBkaABTtRNDSADCRbeBtAQTbPBsABoED6C8ikX8=",
    "te6cckECEAEAAy0AART/APSkE/S88sgLAQIBYgIKAoDQAdDTAwFxsKMB+kBUYTATFm8E+GEC+GLbPBBGVRPbPPLggsh/AcoAVUBQRfQAAsj0APQAEvQAEvQAyQHMye1UDgMB9pIwf+BwIddJwh+VMCDXCx/eIIIQIAZPO7qOVzDTHwGCECAGTzu68uCBgQEB1wCBAQHXAFlsEoEBASAQOEGAUoAhbpVbWfRaMJjIAc8AQTP0QuKBAQv4QhA0QQeBAQEhbpVbWfRZMJjIAc8AQTP0QeIBf+AgghBAd9TIugQC9o5tMNMfAYIQQHfUyLry4IGBAQHXAAExJIEBASJxQTP0DG+hlAHXADCSW23iIG6OGjAUgQEBAX9xIW6VW1n0WjCYyAHPAEEz9ELijiCBAQEBIG7y0ICzEDYScSFulVtZ9FowmMgBzwBBM/RC4uIDf+AgghDinQ+quuMCIAUGAJQw0x8BghDinQ+quvLggYEBAdcA0gABkdSSbQHiWWwSggDOKSWBAQEkWfQNb6GSMG3fbvL0ECSBAQFZIG6VMFn0WjCUQTP0FeICfwKqghBmaO+yuo6YMNMfAYIQZmjvsrry4IGBAQHXAAEx2zx/4IIQlGqYtrqOp9MfAYIQlGqYtrry4IHTPwExyAGCEK/5D1dYyx/LP8n4QgFwbds8f+AwcAcJAdKBAQFtUxIQSVkhbpVbWfRaMJjIAc8AQTP0QuIEgQEBJm1xIW6VW1n0WjCYyAHPAEEz9ELiA4EBASZtIG6VMFn0WjCUQTP0FeKBAQv4QhAkbYEBASFulVtZ9FkwmMgBzwBBM/RB4oEBAW0IAFggbpIwbY4QIG7y0IBvIcgBAYEBAc8AyeJBcCBulTBZ9FowlEEz9BXiEDRBMACibW0ibrOZWyBu8tCAbyIBkTLiECRwAwSAQlAjVSMCyM+FgMoAz4RAzgH6AoBpz0ACXG4BbqiTW20BnsjPhID0APQAz4HJAc+D4vQA9ADJAfsAAgFICw0CEbrwLbPNs8bFGA4MAAIhAhG7QH2zzbPGxRgODwBC7UTQ0gABjhL0BNQB0PQE9AT0BPQEMBBFbBXgMG1tbW1tAAIkWlP4aQ==",
    "te6cckECEgEAAcYAART/APSkE/S88sgLAQIBYgIGAm7QAdDTAwFxsKMB+kBUYTATFm8E+GEC+GLbPBA1VRLbPPLggsh/AcoAVTBQNMsfy//L/8v/ye1UEAMBou2i7fuSMH/gcCHXScIflTAg1wsf3iCCEB8NVXC64wLAAI4q+QGC8IXSiDhMAENFiwKAPLIgWfaIA8VTw2VjRDRkaNrJYfJGupN/2zHgkTDicAQBzjDTHwGCEB8NVXC68uCB0x/6APpAAUMwA9QB0AHUAdAB1AHQFkMwbBZUdUPIVSBQI8sfAfoCAc8WyfkAUgQq+RBSMyn5EFQTN/kQgUT2U2q68vSCAL0RApJwM98CknAy3wHy9ADbPH8FAHoyf1lwbW1tVSMCyM+FgMoAz4RAzgH6AoBpz0ACXG4BbqiTW20BnsjPhID0APQAz4HJAc+D4vQA9ADJAfsAAgEgBwkCEb5kvtnm2eNiDBAIAAIjAgFICg8CASALDQIRsOn2zzbPGxBgEAwAAiACEbDhts82zxsQYBAOAAIhAhG0fLtnm2eNiDAQEQBW7UTQ0gABnNMf0//T/9P/VTBsFOCBAQHXAIEBAdcAgQEB1wBVIAPRWHBVIAACIqoXxAU=",
    "te6cckECEgEAAtwAART/APSkE/S88sgLAQIBYgIMAojQAdDTAwFxsKMB+kBUYTATFm8E+GEC+GLbPBA1VRLbPPLggsj4QwHMfwHKAFUwUDSBAQHPAPQAgQEBzwCBAQHPAMntVBADA16SMH/gcCHXScIflTAg1wsf3iCCEP5RmIO6jwgw2zxsF9s8f+CCEIPqVZm64wIwcAcEBgL0+EKBAQsrAoEBAUEz9ApvoZQB1wAwkltt4iBu8tCAggC04wHCAPL0+ChRelF5RhdQREUVA9s8XHBZyHABywFzAcsBcAHLABLMzMn5AMhyAcsBcAHLABLKB8v/ydBwA4BCQBN/WRAlECNtWVUjAsjPhYDKAM+EQM4B+gIJBQBMgGnPQAJcbgFuqJNbbQGeyM+EgPQA9ADPgckBz4Pi9AD0AMkB+wACItMfAYIQg+pVmbry4IHbPGwXBwgAUNMfAYIQ/lGYg7ry4IH6QAEB+kABAfoA0x/SANMH0gABkdSSbQHiVWAC8vhC+ChUa6NUOphUeYcp2zxwWchwAcsBcwHLAXABywASzMzJ+QDIcgHLAXABywASygfL/8nQB4ERTQjHBRfy9IESk/gjFLwT8vRVAxRDMG1tVSMCyM+FgMoAz4RAzgH6AoBpz0ACXG4BbqiTW20BiuL0APQAyQH7AH8JCwFs+EPQ9AQwggCTuQGAEPQPb6Hy4IfIcAHKAFWRUKnPFhf0ABWBAQHPAMgHEEYQNUSA2zzJAczJCgBUghD+UZiDUAjLH1AGzxZQBM8WWPoCyx/KAMsHIW6zlX8BygDMlHAyygDiABzIz4SA9AD0AM+ByQHPgwIBIA0PAhW8pC7Z4qge2eNiDBAOAC6BAQskAoEBAUEz9ApvoZQB1wAwkltt4gIRvMoO2ebZ42IMEBEAcO1E0NQB+GPSAAGOFYEBAdcA9ASBAQHXAIEBAdcAVTBsFOD0BIEBAdcAgQEB1wBVIAPRWDFwVCIDAAIil3sOKw==",
    "te6cckECDAEAAjsAART/APSkE/S88sgLAQIBYgIIA5zQAdDTAwFxsKMB+kBUYTATFm8E+GEC+GLbPBC9VRrbPPLggsh/AcoAVbBQy88WGfQAF4EBAc8AFYEBAc8AE8oAyEYXEDUY2zzJAczJ7VQJAwcBUu2i7fuSMH/gcCHXScIflTAg1wsf3iDAACLXScEhsJJbf+DAAJEw4w1wBAL++QGC8CKu5tCm3BRldyd91Y0GrjCQo83T2KiFYRhCCK5fbrA5uo7YgRKT+CNSULzy9IIAn2oos/L0+EIrgQELIoEBAUEz9ApvoZQB1wAwkltt4iBu8tCAHIEBC1ANbYEBASFulVtZ9FkwmMgBzwBBM/RB4lCroFMIvuMACX/bMQUGAbw3f3CBAIJwVHmHVHmHVhLIVWCCEIPqVZlQCMsfB9s8yS9VIERAbW1VIwLIz4WAygDPhEDOAfoCgGnPQAJcbgFuqJNbbQGeyM+EgPQA9ADPgckBz4Pi9AD0AMkB+wAHBwAC4ABUghD+UZiDUAjLH1AGzxZQBM8WWPoCyx/KAMsHIW6zlX8BygDMlHAyygDiAhGhRf22ebZ42Y8JCwKm7UTQ0gABjqb6QAEB9ASBAQHXAIEBAdcA0gDUAdDbPDcQfBB7EHoQeRB4VQVsHOD6QAEB9ASBAQHXANQB0Ns8NxB6EHkQeFUFCtFVCHAIB3AHVUEKCgBQ0x8BghD+UZiDuvLggfpAAQH6QAEB+gDTH9IA0wfSAAGR1JJtAeJVYAAOVHZUVHZUJkQ2cQs=",
    "te6cckECCQEAAXcAART/APSkE/S88sgLAQIBYgIGAmbQAdDTAwFxsKMB+kBUYTATFm8E+GEC+GLbPEA02zzy4ILIfwHKAFUgWs8WWM8WygDJ7VQHAwFCl4Ag1yFbcH/gcCHXScIflTAg1wsf3oIQxBlJ37rjAjBwBAL+0x8BghDEGUnfuvLggYEBAdcAATH4QW8kECNfAySBEU0CxwXy9IIQBfXhAHD7AiGOpjF/f1gjWMhVIIIQ/+tA3lAEyx8SgQEBzwABzxbKAMn4QgF/bds8jqRwURNYyFUgghD/60DeUATLHxKBAQHPAAHPFsoAyfhCAX9t2zzifwUFAKJtbSJus5lbIG7y0IBvIgGRMuIQJHADBIBCUCNVIwLIz4WAygDPhEDOAfoCgGnPQAJcbgFuqJNbbQGeyM+EgPQA9ADPgckBz4Pi9AD0AMkB+wACEaCKO7Z5tnjYYwcIAETtRNDSAAGe+kABAfpAAQHSAFUgbBPg+kABAfpAARIC0QFwAAIhWFlLfQ==",
    "te6cckECEwEAA/AAART/APSkE/S88sgLAQIBYgIQAmzQAdDTAwFxsKMB+kBUYTATFm8E+GEC+GLbPEAD2zzy4ILI+EMBzH8BygBZWc8WgQEBzwDJ7VQRAwT07aLt+5Iwf+BwIddJwh+VMCDXCx/eIIIQ/+tA3rqP2TDTHwGCEP/rQN668uCBgQEB1wD6QAEB0gBVIGwT+EFvJDAy+Cgk2zxwWchwAcsBcwHLAXABywASzMzJ+QDIcgHLAXABywASygfL/8nQgRFNAscF8vQB4w9/4CAOBAYIAbCCAPX8+CdvEFihghA7msoAoSOhwgDy9IBCcIgQNBRDMG1tVSMCyM+FgMoAz4RAzgH6AoBpz0ACXG4BbqiTW20BnsjPhID0APQAz4HJAc+D4vQA9ADJAfsABQAWAAAAAFN1Y2Nlc3MBhDAxcIBCcIgUQzBtbVUjAsjPhYDKAM+EQM4B+gKAac9AAlxuAW6ok1ttAZ7Iz4SA9AD0AM+ByQHPg+L0APQAyQH7AAcAIAAAAABBbHJlYWR5IHBhaWQDtoIQgZ2+mbqPNzDTHwGCEIGdvpm68uCB0z/6QAESbBJa2zwxUSHIWYIQMnsrSlADyx/LPwHPFskS+EIBf23bPH/gwACOkiDXScIfjomAINch2zx/2zHgMJEw4nAJCgsAEvhCUiDHBfLghACibW0ibrOZWyBu8tCAbyIBkTLiECRwAwSAQlAjVSMCyM+FgMoAz4RAzgH6AoBpz0ACXG4BbqiTW20BnsjPhID0APQAz4HJAc+D4vQA9ADJAfsAA/T4QW8kMIE+uzOCEDuaygC+EvL0Ads8+gCDCNcYMMgjzxYi+gLJ+QCCAL0RUSX5EPL0+ChY2zxwWchwAcsBcwHLAXABywASzMzJ+QDIcgHLAXABywASygfL/8nQcIBCfwTIAYIQxBlJ31jLH4EBAc8AyRA0QTAUQzBtbQwODwH2INdJqwLIAY5vAdMHIcJAkyHBW5Fw4pYBpr9YywWOWCHCYJMhwXuRcOKWAaa5WMsFjkQhwi+TIcE6kXDilgGmBFjLBY4wIcAtkX+TIcAr4paAPjICywWOHCHAX5F/kyHAL+KWgD8yAssFmQHAPZPywIbfAeLi4uLi5DEgDQAszzEgqTgCIMMAmALJ0AKh1xgw4FvJ0ABC+EPQ9AQwggCg+gGAEPQPb6Hy4IfIcAHKAFpZzxYBzxbJAGxVIwLIz4WAygDPhEDOAfoCgGnPQAJcbgFuqJNbbQGeyM+EgPQA9ADPgckBz4Pi9AD0AMkB+wACEaCKO7Z5tnjYQxESAErtRNDUAfhj0gABnPpAAQGBAQHXAFlsEuD6QAEBgQEB1wBZAtEBAAIhUxC0uA==",
    "te6cckECGQEABDIAART/APSkE/S88sgLAQIBYgIQAsrQAdDTAwFxsKMB+kBUYTATFm8E+GEC+GLbPBCbVRjbPPLggsh/AcoAVZBQqc8WF4EBAc8AFYEBAc8AA8iBAQHPABKBAQHPAMoAEsoAEoEBAc8AA8iBAQHPABL0AMlYzMkBzMntVBcDBObtou37kjB/4HAh10nCH5UwINcLH94gwAAi10nBIbDjAiCCEIGdvpm6j0Yw0x8BghCBnb6ZuvLggdM/+kABEmwSVZHbPDlRqchZghAyeytKUAPLH8s/Ac8WyRCaEHkQaBBXEEYQNUQwEvhCAX9t2zx/4MAABAsPBwPKW9s8JI7c+EFvJDAygT67U7mgE74S8vSBAQFSMiBulTBZ9FowlEEz9BTiAaRRWKCcUwe8lVNSocIAkXDijqEhgQEBJFn0DG+hkjBt3yBu8tCAURihA6RROBdDMNs8UAXoUFXjDX8MBQYAfAFyf1AzbW1tVSMCyM+FgMoAz4RAzgH6AoBpz0ACXG4BbqiTW20BnsjPhID0APQAz4HJAc+D4vQA9ADJAfsAAIBwKoMGf1AzbW1tVSMCyM+FgMoAz4RAzgH6AoBpz0ACXG4BbqiTW20BnsjPhID0APQAz4HJAc+D4vQA9ADJAfsAAvyPePkBIILwCVGQGUruYRzolcVQOt+F/YZN55BXRhQvYI0+svqtFOS6js4w2zwks5QlcPsC3nAqgwZ/UDNtbW1VIwLIz4WAygDPhEDOAfoCgGnPQAJcbgFuqJNbbQGeyM+EgPQA9ADPgckBz4Pi9AD0AMkB+wB/2zHgIJEw4nALCAHagvDN4kLGysVgqZ/y0mg+4PsWKagYrsDxFmURzYIs8g2k6rqORzA0f3AqgwZ/UDNtbW1VIwLIz4WAygDPhEDOAfoCgGnPQAJcbgFuqJNbbQGeyM+EgPQA9ADPgckBz4Pi9AD0AMkB+wAEf9sx4AkBVoLwvPr3dpB8cZzI03nY8ZSqqifoyihxzVkXgXIfIVpFRQG6joXbPH/bMeAKBBDbPNs8M3+IFAsMDQ4AEvhCUqDHBfLghAAQggCdsCSz8vQAFgAAAABTdG9wcGVkAQ74QgF/bds8DwCibW0ibrOZWyBu8tCAbyIBkTLiECRwAwSAQlAjVSMCyM+FgMoAz4RAzgH6AoBpz0ACXG4BbqiTW20BnsjPhID0APQAz4HJAc+D4vQA9ADJAfsAAgEgERYCASASFAIRuhe9s82zxsoYFxMAAiMCEbhR3bPNs8bKGBcVAAIpAhG+Nq7Z5tnjZRwXGADO7UTQ0gABjjf6QAEBgQEB1wCBAQHXANQB0IEBAdcAgQEB1wDSANIAgQEB1wDUMNCBAQHXAPQEMBB6EHkQeGwa4PpAAQGBAQHXAIEBAdcA1AHQgQEB1wAwFEMwBNFVAm1wcFRgBHBVIAAGVHh2GC2XLw==",
    "te6cckECCwEAAcEAART/APSkE/S88sgLAQIBYgIIAlbQAdDTAwFxsKMB+kBUYTATFm8E+GEC+GLbPALbPPLggsh/AcoAAc8Wye1UCQME9O2i7fuSMH/gcCHXScIflTAg1wsf3iCCEGOwp0i6jpgw0x8BghBjsKdIuvLggfoA0wdZbBLbPH/gIIIQgZ2+mbqPNTDTHwGCEIGdvpm68uCB0z/6QAESbBIC2zwwIchZghAyeytKUAPLH8s/Ac8WyfhCAX9t2zx/4MAABgcEBQCibW0ibrOZWyBu8tCAbyIBkTLiECRwAwSAQlAjVSMCyM+FgMoAz4RAzgH6AoBpz0ACXG4BbqiTW20BnsjPhID0APQAz4HJAc+D4vQA9ADJAfsAAW6OsfkBgvCYbCuhJLuSh+tKC9jTEE4cAGejyTlS2InHTQgYW9MNTbqOiXCBAKDbPH/bMeCRMOJwBgGGAts8yMlUQUR/RERtbVUjAsjPhYDKAM+EQM4B+gKAac9AAlxuAW6ok1ttAZ7Iz4SA9AD0AM+ByQHPg+L0APQAyQH7AAcAEvhCUhDHBfLghAIPoIo7tnm2eGMJCgAi7UTQ0gABlPpAATHg+kABAdEAAiDz6sT4",
    "te6cckECEAEAAjwAART/APSkE/S88sgLAQIBYgIHAmbQAdDTAwFxsKMB+kBUYTATFm8E+GEC+GLbPEA02zzy4ILIfwHKAFUgUCPLH8v/yz/J7VQOAwK87aLt+5aAINchMH/gcCHXScIflTAg1wsf3iDAe46mMNMfAcB78uCB1AHQAdMf0wf6QAEB+gDSAAGR1JJtAeJVQBBWbBbgIMAAItdJwSGwlVsCpAJ/4MAA4wAwAqQCfwQFAPhUdDJTQ8hVQFBFyx8SywcBzxYB+gIhbrOVfwHKAMyUcDLKAOLJ+QCCAL0RUXn5EBby9IFE9lFIuhTy9AakQxYCf0REbW1VIwLIz4WAygDPhEDOAfoCgGnPQAJcbgFuqJNbbQGeyM+EgPQA9ADPgckBz4Pi9AD0AMkB+wB/Afwg+QEggvCF0og4TABDRYsCgDyyIFn2iAPFU8NlY0Q0ZGjayWHyRrqUW3/bMeAggvAOI1cmEItXANA2ndcWf2r/uAan4EBZN13Q4Psklx5ysrqXWwKkAn/bMeAggvB0Q8RImC9bjt8rLQNLMW+W3Gp8KreVmKQzSMFS1MrdJroGAGSXWwKkAn/bMeCC8Jyg8YVRdOMuj9N431am5PbEDk38tgkOSYEvex4mIUv5upQwf9sx4AIBIAgNAgFqCQsCEbMl9s82zxsMYA4KAAIiAhGwfjbPNs8bDGAODAACIQIRvgJW2ebZ42GMDg8ARO1E0NIAAZrTH9P/0z9VIGwT4IEBAdcAgQEB1wBZAtEBcFkAAiAZL1F+",
]

describe("disassemble", () => {
    wallets.forEach((wallet, index) => {
        test(`should decompile a raw contract ${index}`, async () => {
            const res = disassembleAndProcess({
                source: Cell.fromBase64(wallet),
            })

            const decompiled = AssemblyWriter.write(res, {
                useAliases: true,
                withoutHeader: true,
                debugSymbols: debugSymbols,
            })

            expect(decompiled).toMatchSnapshot()
        })
    })

    contracts.forEach((contract, index) => {
        test(`should decompile a simple contract ${index}`, async () => {
            const res = disassembleRoot(Cell.fromBase64(contract), {
                computeRefs: true,
            })

            const decompiled = AssemblyWriter.write(res, {
                useAliases: true,
                withoutHeader: true,
                debugSymbols: debugSymbols,
            })

            expect(decompiled).toMatchSnapshot()
        })
    })
})
